Accesibilidad en blog de running

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Runner</title>
-  <link rel="stylesheet" href="/layoutBootstrap.css">
+  <link rel="stylesheet" href="layoutBootstrap.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -19,11 +19,11 @@
 
 <body>
   <video autoplay controls loop muted id="miVideo">
-    <source src="/media/video-intro-runner.mp4" type="video/mp4">
+    <source src="media\video-intro-runner.mp4" type="video/mp4">
   </video>
 
   <div id="contenidoVideo">
-    <img src="/img/LogoRunner.svg" alt="Logo Runner">
+    <img src="img\LogoRunner.svg" alt="Logo Runner">
     <div>
       <h1>Bienvenido a nuestra web</h1>
       <button id="botonVideo">
@@ -38,7 +38,7 @@
   </div>
 
   <header class="encabezado">
-    <img src="img/LogoRunner.svg" alt="Logo Runner">
+    <img src="img\LogoRunner.svg" alt="Logo Runner">
   </header>
 
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -80,7 +80,7 @@
           </div>
 
           <div class="text-center">
-            <p>¿No eres miembro? <a href="/register.html">Registrarse</a></p>
+            <p>¿No eres miembro? <a href="register.html">Registrarse</a></p>
             <p>o inicia sesion con:</p>
             <a href="https://www.gmail.com/" class="text-decoration-none text-black" target="_blank">
               <i class="bi bi-google text-black" style="font-size: 100%"></i>
@@ -162,7 +162,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/father-3437283__340.jpg" alt="Imagen evento runner">
+                <img src="img\father-3437283__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Tu puedes con todo</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Junio o Superior <br><u>Descripción:</u> es una
@@ -186,7 +186,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/athlete-4154243__340.jpg" alt="Imagen evento runner">
+                <img src="img\athlete-4154243__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">100 Metros vallas</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Junio o Superior <br><u>Descripción:</u> En la
@@ -209,7 +209,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/race-932254__340.jpg" alt="Imagen evento runner">
+                <img src="img\race-932254__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Maratón</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Senior o Master <br><u>Descripción:</u> Este
@@ -233,7 +233,7 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/pexels-photo-235922.jpeg" alt="Imagen evento runner">
+                <img src="img\pexels-photo-235922.jpeg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Ruta por Bedalmádena</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Promesa o superior <br><u>Descripción:</u> La
@@ -256,7 +256,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/run-2181103__340.jpg" alt="Imagen evento runner">
+                <img src="img\run-2181103__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Paseo diario</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Para todas las categorías<br><u>Descripción:</u>
@@ -279,7 +279,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/runner-660374__340.jpg" alt="Imagen evento runner">
+                <img src="img\runner-660374__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">De ruta por el Bosque</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Juvenil o superior <br><u>Descripción:</u> La
@@ -302,7 +302,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/corriendoeneldesierto.jpg" alt="Imagen evento runner">
+                <img src="img\corriendoeneldesierto.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Ruta Montañosa</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Promesa o superior <br><u>Descripción:</u> La
@@ -325,7 +325,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/running-6252827__340.jpg" alt="Imagen evento runner">
+                <img src="img\running-6252827__340.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Ruta por Madrid</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Juvenil o superior <br><u>Descripción:</u> La
@@ -348,7 +348,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/img/desert-2806435_960_720.jpg" alt="Imagen evento runner">
+                <img src="img\desert-2806435_960_720.jpg" alt="Imagen evento runner">
                 <div class="card-body">
                   <h5 class="card-text text-bg-light">Ruta Desierto</h5>
                   <p class="card-text text-bg-light"><u>Categoria:</u> Master <br><u>Descripción:</u> La “Ruta desierto”
@@ -376,7 +376,7 @@
     <div class="col-md-3">
       <div class="album py-5 px-2 bg-info-subtle">
         <aside class="d-flex justify-content-center">
-          <img class="img-fluid" width="87%" src="img/BannerRunner.png" alt="Banner Black Friday">
+          <img class="img-fluid" width="87%" src="img\BannerRunner.png" alt="Banner Black Friday">
         </aside>
         <aside class="my-5">
           <h3 class="text-center px-1 py-1">Siguenos en nuestras redes sociales</h3>
@@ -410,21 +410,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/father-3437283__340.jpg" class="d-block w-100" alt="Imagen carousel">
+              <img src="img\father-3437283__340.jpg" class="d-block w-100" alt="Imagen carousel">
               <div class="carousel-caption d-none d-md-block text-truncate">
                 <h5>Tu puedes con todo</h5>
                 <p>Carrera por etapas ideada para<br> amantes del running</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/race-932254__340.jpg" class="d-block w-100" alt="Imagen carousel">
+              <img src="img\race-932254__340.jpg" class="d-block w-100" alt="Imagen carousel">
               <div class="carousel-caption d-none d-md-block text-truncate">
                 <h5>Maratón</h5>
                 <p>Carrera de larga distancia</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/running-6252827__340.jpg" class="d-block w-100" alt="Imagen carousel">
+              <img src="img\running-6252827__340.jpg" class="d-block w-100" alt="Imagen carousel">
               <div class="carousel-caption d-none d-md-block text-truncate">
                 <h5>Ruta por Madrid</h5>
                 <p>Carrera por etapas en el <br>centro de Madrid</p>
