Accesibilidad en blog de running

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             </div>
 
             <div class="col">
-              <a href="#!">¿Has olvidado la contraseña?</a>
+              <a class="page-link" href="#!">¿Has olvidado la contraseña?</a>
             </div>
           </div>
 
           <div class="text-center">
-            <p>¿No eres miembro? <a href="register.html">Registrarse</a></p>
+            <p>¿No eres miembro? <a class="page-link" href="register.html">Registrarse</a></p>
             <p>o inicia sesion con:</p>
             <a href="https://www.gmail.com/" class="text-decoration-none text-black" target="_blank">
               <i class="bi bi-google text-black" style="font-size: 100%"></i>
