Accesibilidad en blog de running

--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apartado Registro</title>
-    <link rel="stylesheet" href="/layoutBootstrap.css">
+    <link rel="stylesheet" href="layoutBootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 
 <body>
     <header class="encabezado">
-        <img src="img/LogoRunner.svg" alt="Logo Runner">
+        <img src="img\LogoRunner.svg" alt="Logo Runner">
     </header>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="text-center">
-                        <p>¿No eres miembro? <a href="/register.html">Registrarse</a></p>
+                        <p>¿No eres miembro? <a href="register.html">Registrarse</a></p>
                         <p>o inicia sesion con:</p>
                         <a href="https://www.gmail.com/" class="text-decoration-none text-black" target="_blank">
                             <i class="bi bi-google text-black" style="font-size: 100%"></i>
@@ -263,7 +263,7 @@
             <main>
                 <div class="album py-5 px-2 bg-info-subtle">
                     <aside class="d-flex justify-content-center">
-                        <img class="img-fluid" width="87%" src="img/BannerRunner.png" alt="Banner Black Friday">
+                        <img class="img-fluid" width="87%" src="img\BannerRunner.png" alt="Banner Black Friday">
                     </aside>
                     <aside class="my-5">
                         <h3 class="text-center px-1 py-1">Siguenos en nuestras redes sociales</h3>
@@ -299,21 +299,21 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/father-3437283__340.jpg" class="d-block w-100" alt="...">
+                                <img src="img\father-3437283__340.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block text-truncate">
                                     <h5>Tu puedes con todo</h5>
                                     <p>Carrera por etapas ideada para<br> amantes del running</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/race-932254__340.jpg" class="d-block w-100" alt="...">
+                                <img src="img\race-932254__340.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block text-truncate">
                                     <h5>Maratón</h5>
                                     <p>Carrera de larga distancia</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/running-6252827__340.jpg" class="d-block w-100" alt="...">
+                                <img src="img\running-6252827__340.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block text-truncate">
                                     <h5>Ruta por Madrid</h5>
                                     <p>Carrera por etapas en el <br>centro de Madrid</p>
