Accesibilidad en blog de running

--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
                         <a class="nav-link text-info" href="register.html">Registro</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="layoutBootstrap.html">Entradas</a>
+                        <a class="nav-link text-white" href="index.html">Entradas</a>
                     </li>
                     <li class="nav-item px-3">
                         <a class="nav-link text-white" href="#">Crear nueva entrada <i
