Accesibilidad en blog de running

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item px-3">
-            <button name="botonExampleModal" type="button" class="btn text-white" data-bs-toggle="modal"
+            <button title="botonLoginModal" name="botonExampleModal" type="button" class="btn text-white" data-bs-toggle="modal"
               data-bs-target="#exampleModal" aria-label="Login">
               Login
             </button>
@@ -154,7 +154,7 @@
 
   <nav class="row">
     <ol class="col breadcrumb px-3 py-3">
-      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item">Home</li>
       <li class="breadcrumb-item text-grey active" aria-current="page">Entradas</li>
     </ol>
   </nav>
