--- a/register.html
+++ b/register.html
@@ -95,19 +95,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item px-3">
-                        <button type="button" class="btn text-white" data-bs-toggle="modal"
+                        <button type="button" title="botonLoginModal" class="btn text-white" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             Login
                         </button>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-info" href="register.html">Registro</a>
+                        <a title="registroLi" class="nav-link text-info" href="register.html">Registro</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="index.html">Entradas</a>
+                        <a title="entradasLi" class="nav-link text-white" href="index.html">Entradas</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link text-white" href="#">Crear nueva entrada <i
+                        <a title="nuevaEntradaLi" class="nav-link text-white" href="#">Crear nueva entrada <i
                                 class="bi bi-plus-circle-fill"></i></a>
                     </li>
                 </ul>
@@ -133,7 +133,7 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb py-2 px-2">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item">Home</li>
             <li class="breadcrumb-item text-grey active" aria-current="page">Registro</li>
         </ol>
     </nav>
