Accesibilidad en blog de running

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </li>
         </ul>
         <div class="px-3">
-          <button name="botonCillapse1" class="btn btn-light" type="button" data-bs-toggle="collapse"
+          <button title="botonCillapse1" name="botonCillapse1" class="btn btn-light" type="button" data-bs-toggle="collapse"
             href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
             <i class="bi bi-search"></i>
           </button>
@@ -450,11 +450,11 @@
 
   <nav class="row">
     <ul class="col pagination justify-content-lg-start px-3 py-3">
-      <li class="page-item"><a class="page-link" href="#"><i class="bi bi-arrow-left-circle"></i></a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#"><i class="bi bi-arrow-right-circle"></i></a></li>
+      <li class="page-item"><a title="page1" class="page-link" href="#"><i class="bi bi-arrow-left-circle"></i></a></li>
+      <li class="page-item"><a title="page2" class="page-link" href="#">1</a></li>
+      <li class="page-item"><a title="page3" class="page-link" href="#">2</a></li>
+      <li class="page-item"><a title="page4" class="page-link" href="#">3</a></li>
+      <li class="page-item"><a title="page5" class="page-link" href="#"><i class="bi bi-arrow-right-circle"></i></a></li>
     </ul>
   </nav>
 
